--- a/_posts/2024-05-07-bench-hvp.md
+++ b/_posts/2024-05-07-bench-hvp.md
@@ -1,7 +1,7 @@
 ---
 layout: distill
 title: How to compute Hessian-vector products?
-description: The product between the Hessian of a function and a vector, so-called the Hessian-vector product (HVP), is a fundamental quantity to study the variation of a function. It is ubiquitous in traditional optimization and machine learning. However, the computation of HVPs is often considered prohibitive in the context of deep learning, driving practitioners to use proxy quantities to evaluate the loss geometry. Standard automatic differentiation theory predicts that the computational complexity of an HVP is of the same order of magnitude as the complexity of computing a gradient. The goal of this blog post is to provide a practical counterpart to this theoretical result, showing that modern automatic differentiation frameworks, `JAX `and `PyTorch``, allow for efficient computation of these HVPs in standard deep learning cost functions.
+description: The product between the Hessian of a function and a vector, so-called the Hessian-vector product (HVP), is a fundamental quantity to study the variation of a function. It is ubiquitous in traditional optimization and machine learning. However, the computation of HVPs is often considered prohibitive in the context of deep learning, driving practitioners to use proxy quantities to evaluate the loss geometry. Standard automatic differentiation theory predicts that the computational complexity of an HVP is of the same order of magnitude as the complexity of computing a gradient. The goal of this blog post is to provide a practical counterpart to this theoretical result, showing that modern automatic differentiation frameworks, JAX and PyTorch, allow for efficient computation of these HVPs in standard deep learning cost functions.
 date: 2024-05-07
 future: true
 htmlwidgets: true
@@ -59,15 +59,15 @@ With this blog post, we aim to convince the practitioners that with modern autom
 
 ## What are HVPs and where are they useful?
 
-Let us first introduce the notion of Hessian and HVP. We will consider in this post a twice differentiable function $$f:\mathbb{R}^d\to\mathbb{R}$$ that goes from a vector $$x$$ in space $$\mathbb{R}^d$$ to a real number in $$\mathbb{R}$$. This typically corresponds to a function that maps the value of the parameters $$x$$ of a neural network to the loss $$f(x)$$.
-For such a function, standard AD can be used to efficiently compute the gradient of the loss $$\nabla f(x) = \left[ \frac{\partial f}{\partial x_i}(x)\right]_{1\le i \le d} \in \mathbb{R}^d$$, using the so-called backpropagation.
+Let us first introduce the notion of Hessian and HVP. We will consider in this post a twice differentiable function $$f:\mathbb{R}^d\to\mathbb{R}$$ that goes from a vector $$x$$ in space $$\mathbb{R}^d$$ to a real number in $$\mathbb{R}$$. This typically corresponds to a function that maps the value of the parameters $$\theta$$ of a neural network to the loss $$f(\theta)$$.
+For such a function, standard AD can be used to efficiently compute the gradient of the loss $$\nabla f(\theta) = \left[ \frac{\partial f}{\partial \theta_i}(\theta)\right]_{1\le i \le d} \in \mathbb{R}^d$$, using the so-called backpropagation.
 The Hessian matrix of $$f$$ at $$x$$ is the matrix of its second-order partial derivatives
 
 $$
-  \nabla^2 f(x) = \left[\frac{\partial^2f}{\partial x_i\partial x_j}(x)\right]_{1\leq i,j\leq d}\in\mathbb{R}^{d\times d}\enspace.
+  \nabla^2 f(\theta) = \left[\frac{\partial^2f}{\partial \theta_i\partial \theta_j}(\theta)\right]_{1\leq i,j\leq d}\in\mathbb{R}^{d\times d}\enspace.
 $$
 
-This matrix corresponds to the derivative of the gradient and captures how the gradient will change when moving $$x$$. To evaluate the variation of the gradient when moving $$x$$ in the direction $$v\in\mathbb{R}^d$$, one can compute the quantity $$\nabla^2 f(x) v\in\mathbb{R}^d$$. This is the so-called Hessian-vector product (HVP).
+This matrix corresponds to the derivative of the gradient and captures how the gradient will change when moving $$x$$. To evaluate the variation of the gradient when moving $$x$$ in the direction $$v\in\mathbb{R}^d$$, one can compute the quantity $$\nabla^2 f(\theta) v\in\mathbb{R}^d$$. This is the so-called Hessian-vector product (HVP).
 
 Let us review some use cases of HVPs in optimization and machine learning.
 
@@ -76,19 +76,19 @@ When trying to find the minimum of the function $$f$$, methods that account for 
 For instance, Newton's method relies on update rules of the form
 
 $$
-  x_{k+1} = x_k - \eta_k[\nabla^2f(x_k)]^{-1}\nabla f(x_k)
+  \theta_{k+1} = \theta_k - \eta_k[\nabla^2f(\theta_k)]^{-1}\nabla f(\theta_k)
 $$
 
 for some step-size $$\eta_k>0$$.
 
-When evaluating the term $$[\nabla^2f(x_k)]^{-1}\nabla f(x_k)$$, it would be very inefficient to first compute the full Hessian matrix $$\nabla^2f(x_k)$$, then invert it and finally multiply this with the gradient $$\nabla f(x_k)$$.
+When evaluating the term $$[\nabla^2f(\theta_k)]^{-1}\nabla f(\theta_k)$$, it would be very inefficient to first compute the full Hessian matrix $$\nabla^2f(\theta_k)$$, then invert it and finally multiply this with the gradient $$\nabla f(\theta_k)$$.
 Instead, one computes the inverse Hessian-Vector Product (iHPV) by solving the following linear system
 
 \begin{equation}\label{eq:linear_system}
-  \nabla^2f(x)v = b\enspace.
+  \nabla^2f(\theta)v = b\enspace.
 \end{equation}
 
-with $$b = \nabla f(x_k)$$.
+with $$b = \nabla f(\theta_k)$$.
 This approach is much more efficient as it avoids computing and storing the full Hessian matrix, and only computes the inverse of the matrix in the direction $$v$$.
 
 A second use case for the iHVP in optimization is with bilevel optimization. In bilevel optimization, one wants to solve the following problem
@@ -105,7 +105,7 @@ $$
 
 Here, the term $$\nabla^2_{yy} G(x, y)$$ is the Hessian of the function $$G$$ relatively to $$y$$. Thus, this quantity also requires computing an iHVP.
 
-To compute the iHVP, many methods proposed in the literature rely on HVPs to solve \eqref{eq:linear_system} without ever accessing $$\nabla^2 f$$, like Neumann iterates<d-cite key="Ghadimi2018"></d-cite><d-cite key="Ji2021stocbio"></d-cite>, the Conjugate Gradient method or gradient descent steps<d-cite key="Arbel2022amigo"></d-cite><d-cite key="Dagreou2022SABA"></d-cite> in the quadratic form $$v\mapsto \frac12\langle\nabla^2f(x)v, v\rangle - \langle b, v\rangle$$. These methods are based on the computation of HVPs, as illustrated with the highlighted terms in the Conjugate Gradient method<d-cite key=Hestenes1952CG></d-cite><d-cite key=Nocedal2006></d-cite>. Thus, an efficient implementation of HVPs is crucial for the overall algorithm performance.
+To compute the iHVP, many methods proposed in the literature rely on HVPs to solve \eqref{eq:linear_system} without ever accessing $$\nabla^2 f$$, like Neumann iterates<d-cite key="Ghadimi2018"></d-cite><d-cite key="Ji2021stocbio"></d-cite>, the Conjugate Gradient method or gradient descent steps<d-cite key="Arbel2022amigo"></d-cite><d-cite key="Dagreou2022SABA"></d-cite> in the quadratic form $$v\mapsto \frac12\langle\nabla^2f(\theta)v, v\rangle - \langle b, v\rangle$$. These methods are based on the computation of HVPs, as illustrated with the highlighted terms in the Conjugate Gradient method<d-cite key=Hestenes1952CG></d-cite><d-cite key=Nocedal2006></d-cite>. Thus, an efficient implementation of HVPs is crucial for the overall algorithm performance.
 
 <p class="framed">
   <b class="underline">Conjugate gradient to solve \eqref{eq:linear_system}</b><br>
@@ -113,14 +113,14 @@ To compute the iHVP, many methods proposed in the literature rely on HVPs to sol
 
   <b>Initialization</b>
   $$
-    r_0 = \textcolor{orange}{\nabla^2f(x) v_0} - b,\quad p_0 = -r_0,\quad t = 0
+    r_0 = \textcolor{orange}{\nabla^2f(\theta) v_0} - b,\quad p_0 = -r_0,\quad t = 0
   $$
 
   <b>While</b> \(r_t \neq 0\)
   \begin{align*}
-    \alpha_t  &=\frac{r_t^\top r_t}{p_t^\top \textcolor{orange}{\nabla^2f(x) p_t}} \\
+    \alpha_t  &=\frac{r_t^\top r_t}{p_t^\top \textcolor{orange}{\nabla^2f(\theta) p_t}} \\
     v_{t+1} &=v_t + \alpha_t p_t \\
-    r_{t+1} &=r_t  + \alpha_t\textcolor{orange}{\nabla^2f(x) p_t} \\
+    r_{t+1} &=r_t  + \alpha_t\textcolor{orange}{\nabla^2f(\theta) p_t} \\
     \beta_{t+1} &=\frac{r_{t+1}^\top r_{t+1}}{r_t^\top r_t} \\
     p_{t+1} &=-r_{t+1} + \beta_{t+1} p_t\\
     t &=t + 1
@@ -142,7 +142,7 @@ In several papers<d-cite key=Ghorbani2019></d-cite><d-cite key=Dauphin2014></d-c
   <b>Input</b> Initial vector \(v_0\).<br>
   <b>Initialization</b>
   $$
-    w'_0 = \textcolor{orange}{\nabla^2f(x)v_0},\quad \alpha_0 = w_0'^\top v_0,\quad w_0 = w_0' - \alpha_0 v_0
+    w'_0 = \textcolor{orange}{\nabla^2f(\theta)v_0},\quad \alpha_0 = w_0'^\top v_0,\quad w_0 = w_0' - \alpha_0 v_0
   $$
 
   <b>For</b> \(i = 1,\dots, k-1\):<br>
@@ -163,9 +163,12 @@ We now turn to the practical computation of HVPs.
 
 ## A quick detour of automatic differentiation
 
-Automatic differentiation is an important tool to compute automatically the derivatives of differentiable functions. In machine learning, AD is used everywhere to compute gradients of deep learning cost functions<d-cite key="Rumelhart1986"></d-cite>. There are two modes in AD; the forward mode that computes Jacobian-vector products (JVPs) and the reverse mode that computes vector-Jacobian products (VJPs). Since the gradient of a scalar function is a special case of the VJP, the reverse mode is the most frequently used in machine learning.
+Automatic differentiation is an important tool to compute exactly the derivatives of differentiable functions obtained as the composition of simple operations.
+There are two modes in AD; the forward mode that computes Jacobian-vector products (JVPs) and the reverse mode that computes vector-Jacobian products (VJPs).
+Since the gradient of a scalar function is a special case of the VJP, the reverse mode is the most frequently used in machine learning.
+It is typically used to compute the gradients of deep learning cost functions, where it is called *backpropagation*<d-cite key="Rumelhart1986"></d-cite>. 
 
-In what follows, we present briefly the notion of computational graph and the two AD modes. For a more detailed explanation, we refer the reader to the survey by Baydin et al.<d-cite key="Baydin2018"></d-cite>. 
+In what follows, we briefly present the notion of computational graph and the two AD modes. For a more detailed explanation, we refer the reader to the excellent survey by Baydin et al.<d-cite key="Baydin2018"></d-cite>. 
 
 ### Computational graph
 
@@ -189,22 +192,33 @@ def f(U, W):
     return output
 ```
 
-### Forward mode
+Let us consider a function $$f:\mathbb{R}^d\to\mathbb{R}^p$$ with this simple computational graph.
 
-The chain rule enables us to leverage the computational graph to evaluate efficiently the derivatives of a function. Let us consider this computational graph fragment.
+{% include figure.html path="assets/img/2024-05-07-bench-hvp/direct_graph.png" class="img-fluid"%}
 
-{% include figure.html path="assets/img/2024-05-07-bench-hvp/forward_diff.png" class="img-fluid" %}
-
-To compute the derivative of the node $$z_i$$ with respect its ancestor $$z_j$$, the chain rule yields
-
-\begin{equation}\label{eq:chain_rule_forward}
-  \frac{\partial z_i}{\partial z_j}=
-  \sum_{k\in\text{parents}(i)} \textcolor{red}{\frac{\partial z_i}{\partial z_k}}\textcolor{blue}{\frac{\partial z_k}{\partial z_j}}\enspace.
+By denoting $$z_1 = \theta$$ and $$z_n = f(\theta)$$ and assuming $$z_i\in\mathbb{R}^{m_i}$$, the chain rule gives us the expression of the Jacobian $$\frac{\partial f}{\partial \theta}(\theta)$$ as a product of the Jacobian of the intermediate states $$z_1, \dots, z_n$$.
+\begin{equation}\label{eq:chain_rule}
+  \underbrace{\frac{\partial f}{\partial \theta}(\theta)}\_{p\times q} = \frac{\partial z_n}{\partial z_1}
+    =\frac{\partial z_n}{\partial z_2}\frac{\partial z_2}{\partial z_1}=\cdots = \underbrace{\frac{\partial z_n}{\partial z_{n-1}}}\_{m_n\times m_{n-1}}\underbrace{\frac{\partial z_{n-1}}{\partial z_{n-2}}}\_{m_{n-1}\times m_{n-2}}\cdots\underbrace{\frac{\partial z_2}{\partial z_1}}\_{m_2\times m_{1}}\enspace.
 \end{equation}
 
-If $$z_k$$ is a parent of $$z_i$$, the quantity $$\textcolor{red}{\frac{\partial z_i}{\partial z_k}}$$ is easy to compute since $$z_i$$ and $$z_k$$ are connected by an elementary operation we know how to differentiate. For the quantity $$\textcolor{blue}{\frac{\partial z_k}{\partial z_j}}$$, we can compute it recursively thanks to \eqref{eq:chain_rule_forward} during a forward pass in the computational graph and using the fact that $$\frac{\partial z_j}{\partial z_j} = 1$$. Note that by initializing by $$\frac{\partial z_j}{\partial z_j} = v$$ for some vector $$v$$, the forward differentiation in \eqref{eq:chain_rule_forward}  returns the Jacobian-vector product (JVP) $$\frac{\partial z_i}{\partial z_j} v$$.
+Depending on the order of the multiplication, one can compute the derivative of $$f$$ with respect to $$z_1$$ in two ways: the forward mode and the reverse mode.
 
-Thus, computing a JVP can be achieved by a forward pass in a computational graph with the supplementary overhead of the computation of the successive JVPs. Therefore, the time complexity of forward differentiation is roughly twice the time complexity of the evaluation of $$f_x$$.
+### Forward mode
+
+The forward mode aims at computing JVPs 
+
+\begin{equation}\label{eq:chain_rule_jvp}
+  \frac{\partial f}{\partial \theta}(\theta)\times v = \frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_2}{\partial z_1}v\enspace.
+\end{equation}
+
+The forward mode consists in doing the multiplications in \eqref{eq:chain_rule_jvp} from the right to the left. This corresponds to a forward pass in the computational graph where we propagate at the same time the states $$z_i$$ and the partial derivatives $$\frac{\partial z_{i+1}}{\partial z_i}$$. In the case where $$f$$ is real-valued, we obtain the gradient by computing $$d$$ JVPs since 
+
+$$
+\frac{\partial f}{\partial \theta_i}(\theta) = \frac{\partial f}{\partial \theta}(\theta) e_i
+$$
+
+where $$e_i$$ is the $$i$$-th canonical vector of $$\mathbb{R}^d$$.
 
 To understand properly what is happening when using forward differentiation, let us go back to the linear MLP defined in \eqref{eq:mlp}.
 If we code ourselves the forward differentiation to get the JVP, we obtain the following code
@@ -223,37 +237,30 @@ def jvp(U, W, vu, vw):
     return output
 ```
 
-In comparison with the code of the evaluation of $$f$$, there are two more operations corresponding to the computation of the dual variable `vz1` and `vz2`. In terms of memory, if we consider the computational of the JVP as coded in the previous snippet, the maximum number of parents of a vertex is four. This maximum is achieved by the vertex `vz2` which has the vertices `U`, `vz1`, `vu` and `z1` as parents.
+In comparison with the code of the evaluation of $$f_x$$, there are two more operations corresponding to the computation of the dual variable `vz1` and `vz2`. In terms of memory, if we consider the computational of the JVP as coded in the previous snippet, the maximum number of parents of a vertex is four. This maximum is achieved by the vertex `vz2` which has the vertices `U`, `vz1`, `vu` and `z1` as parents.
 
-In `JAX`, we can get the JVP of $$f$$ at $$x$$ in the direction $$v$$ with `jax.jvp(f, (x, ), (v, ))[1]`.
+In `JAX`, we get the JVP of $$f$$ at $$x$$ in the direction $$v$$ with `jax.jvp(f, (params, ), (v, ))[1]`.
 
 ### Reverse mode
-Now, let us present the reverse mode AD. We consider the following computational graph snippet
+The reverse mode aims at computing VJPs
 
-{% include figure.html path="assets/img/2024-05-07-bench-hvp/reverse_diff.png" class="img-fluid" %}
-
-Instead of expressing $$\frac{\partial z_i}{\partial z_j}$$ according to the parents nodes of $$z_i$$, one can express it according to the children nodes of $$z_j$$
-
-\begin{equation}\label{eq:chain_rule_backward}
-  \frac{\partial z_i}{\partial z_j}=
-  \sum_{k\in\text{children}(j)}\textcolor{blue}{\frac{\partial z_i}{\partial z_k}}\textcolor{red}{\frac{\partial z_k}{\partial z_j}}\enspace.
+\begin{equation}\label{eq:chain_rule_vjp}
+  v^\top\frac{\partial f}{\partial \theta}(\theta) = v^\top\frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_2}{\partial z_1}\enspace.
 \end{equation}
 
-If $$z_k$$ is a child of $$z_j$$, then the quantity $$\textcolor{red}{\frac{\partial z_k}{\partial z_j}}$$ is easy to compute since the vertices $$z_k$$ and $$z_j$$ are linked by an elementary operation we know how to differentiate. To get $$\textcolor{blue}{\frac{\partial z_i}{\partial z_k}}$$, one can apply the formula \eqref{eq:chain_rule_backward} recursively during a backward pass in the computational graph with the initialization $$\frac{\partial z_i}{\partial z_i} = 1$$. If we initialize the backward pass with $$\frac{\partial z_i}{\partial z_i} = v$$, then the reverse AD returns the vector-Jacobian product (VJP) $$v \frac{\partial z_i}{\partial z_j}$$.
+In the reverse AD, we do the multiplications of \eqref{eq:chain_rule_jvp} from the left to the right. It requires doing one forward pass in the computational graph to compute the intermediate states $$z_i$$ and then a backward pass to propagate the successive partial derivatives from the left to the right. Contrary to the forward mode, it has a more important memory footprint. Indeed, it requires storing the values of all the states. For instance, to compute the last term $$\frac{\partial z_2}{\partial z_1}$$, one needs the value of $$z_1$$ which was the first computed during the forward pass. If $$f$$ is scalar, its gradient is a VJP with $$v=1$$. Thus, one can get the gradient on $$f$$ by performing only one reverse differentiation. This makes this mode more efficient to compute gradients.
 
-At the end of the day, the reverse AD requires a forward pass in the computational graph to get the intermediate states $$z_i$$ and a backward pass to propagate the intermediate partial derivatives. Hence, the complexity of the reverse AD is twice the complexity of the evaluation of $$f_x$$. Moreover, it suffers from a memory burden because of the storing of all the intermediate states $$z_i$$ computed during the forward pass. 
-
-Let us observe what happens if we code manually the backpropagation to get the gradient of the previous function $$f_x$$ defined by $$f_x(U, W) = \frac12(UW^\top x)^2$$.
+Let us observe what happens if we code manually the backpropagation to get the gradient of the previous function $$f_x$$ defined by $$f_x(U, W) = \frac12(UW x)^2$$.
 
 ``` python
 def gradient(U, W):
     ## Forward pass
     z1 = W @ x
     z2 = U @ z1
-    output = .5 * z2**2
+    output = 0.5 * z2**2
 
     ## Reverse pass
-    ### output = .5 * z2**2
+    ### output = 0.5 * z2**2
     dz2 = z2
 
     ### z2 = U @ z1
@@ -268,37 +275,40 @@ def gradient(U, W):
 
 This function returns the gradient of $$f_x$$. At reading this code, we understand one needs to store all the intermediate values of the forward pass in the graph. Indeed, if we look at the case of `z1` which is the first node computed, it is used four steps later for the computation of `dU`.
 
-To get the VJP in JAX, one can use `jax.vjp(f, x)[1](v)`.
+To get the gradient in JAX, one can use `jax.grad(f)(params)`.
 
 
 ## Naive computation of HVPs
-Since we are interested in computing $$\nabla^2 f(x)v$$, the simplest way to do it is to compute the Hessian matrix and then multiply it by the vector $$v$$. This can be achieved in `JAX` by calling `jax.hessian(f) @ v`.
+Since we are interested in computing $$\nabla^2 f(x)v$$, the simplest way to do it is to compute the Hessian matrix and then multiply it by the vector $$v$$. This can be achieved in `JAX` by calling `jax.hessian(f)(params) @ v`.
 
-However, this method is quite cumbersome making it impossible to use for deep neural networks. Indeed, the storage of the full Hessian matrix has $$\mathcal{O}(d^2)$$ complexity where $$d$$ is the input dimension.
+This method is quite cumbersome making it impossible to use for deep neural networks. Indeed, the storage of the full Hessian matrix has $$\mathcal{O}(d^2)$$ complexity where $$d$$ is the input dimension.
 
-Nevertheless, we will see in what follows that computing and storing the full Hessian matrix is not mandatory to compute HVPs.
+However, it is possible to compute the HVP without computing the full Hessian matrix. 
+
 
 ## HVPs without explicit Hessian computation
 A clever use of AD enables computing HVPs without computing the Hessian. The [JAX documentation](https://jax.readthedocs.io/en/latest/notebooks/autodiff_cookbook.html) describes three ways to do it.
 
+The HVP is also the directional derivative of the gradient in the direction $$v$$:
+
+$$
+\nabla^2f(\theta) v = \lim_{\epsilon\to 0} \frac1\epsilon[\nabla f(\theta+\epsilon v)-\nabla f(\theta)] = \nabla [\langle \nabla f(.), v\rangle](\theta)\enspace.
+$$
+
+Pearlmutter<d-cite key="Pearlmutter1994"></d-cite> proposed to leverage this identity to compute HVP without computing Hessian. This can be done in three fashions: the forward-over-reverse, the reverse-over-reverse and the reverse-over-forward.
+
 ### Forward-over-reverse
-The HVPs have another interpretation coming from differential calculus. They are the directional derivatives of the gradient of $$f$$ in the direction $v$<d-cite key="Pearlmutter1994"></d-cite>:
+The forward-over-reverse mode consists in doing forward differentiation in a computational graph of the gradient of $$f$$.
 
-$$
-\nabla^2f(x) v = \lim_{\epsilon\to 0} \frac1\epsilon[\nabla f(x+\epsilon v)-\nabla f(x)]\enspace.
-$$
-
-Now let us take a step back. If we have a differentiable vector field $$\phi:\mathbb{R}^p\to\mathbb{R}^p$$, the directional derivative of $$\phi$$ at $$x$$ in the direction $$v$$ is exactly the product between its Jacobian matrix at $$x$$ and the vector $$v$$. As we have seen before, this Jacobian-Vector product (JVP) can be efficiently computed by forward differentiation. In this case, its computational complexity is twice the complexity of the evaluation of the vector field $$\phi$$. 
-
-Hence, to get the HVP, one can apply the previous principle by tacking $$\phi = \nabla f$$. The implementation in `JAX`` is only two lines of code. 
+Its implementation in `JAX` is only two lines of code. 
 
 ```python
-def hvp_forward_over_reverse(f, x, v):
-  return jax.jvp(jax.grad(f), (x, ), (v, ))[1]
+def hvp_forward_over_reverse(f, params, v):
+  return jax.jvp(jax.grad(f), (params, ), (v, ))[1]
 ```
-In this case, `jax.grad(f)(x)` is computed by backward AD, whose complexity is two times the complexity of evaluating $$f$$. Thus, the temporal complexity of `hvp_forward_over_reverse` is roughly four times the complexity of the evaluation of $$f$$.
+In this case, `jax.grad(f)(params)` is computed by backward AD, whose complexity is two times the complexity of evaluating $$f$$. Thus, the temporal complexity of `hvp_forward_over_reverse` is roughly four times the complexity of the evaluation of $$f$$.
 
-To better see what happens, let us consider again our function $$f$$ defined by \eqref{eq:mlp}. The Python code of the `forward-over-reverse` HVP is the following.
+To better see what happens, let us consider again our function $$f_x$$ defined by \eqref{eq:mlp}. The Python code of the `forward-over-reverse` HVP is the following.
 
 ```python
 def forward_over_reverse(U, W, vu, vw):
@@ -325,23 +335,19 @@ def forward_over_reverse(U, W, vu, vw):
     return vz4, vz6
   ```
 
-The take-home message of this part is that, after computing the gradient of $$f$$, one can consider a computational graph of this gradient and perform forward differentiation through this new computational graph. Here, the variables `z1`,..., `z6` are the vertices of a computational graph of the gradient of $$f$$.
+The take-home message of this part is that, after computing the gradient of $$f_x$$, one can consider a computational graph of this gradient and perform forward differentiation through this new computational graph. Here, the variables `z1`,..., `z6` are the vertices of a computational graph of the gradient of $$f_x$$. The nice thing is that the mode enables getting at the same time the gradient and the HVP. Indeed, in the previous snippet, `z4` and `z6` are actually the gradient of $$f_x$$ which could be also returned if needed.
 
 ### Reverse-over-reverse
-The second way is the reverse-over-reverse mode. It leverages the fact that the HVP is also the gradient of the scalar product between the gradient of $$f$$ and $$v$$.
+Instead of doing forward differentiation of the gradient, one can multiply the gradient by $$v$$. Since we get a scalar, one can backpropagate in this scalar product. This is the reverse-over-reverse mode.
 
-$$
-\nabla^2f(x)v = \nabla[\langle\nabla f(.),v\rangle](x)
-$$
-
-Therefore, these lines of `JAX`` implement the HVP
+It can be implemented by these lines of code.
 ```python
-def hvp_reverse_over_reverse(f, x, v):
-  return jax.grad(lambda x: jnp.vdot(jax.grad(f)(x), v))
+def hvp_reverse_over_reverse(f, params, v):
+  return jax.grad(lambda y: jnp.vdot(jax.grad(f)(y), v))(params)
 ```
 Since the gradients are computed by backpropagation, the complexity of `hvp_reverse_over_reverse` is twice the complexity of `jax.grad(f)`, which is roughly four times the complexity of the evaluation of $$f$$.
 
-Writting down the code of the reverse-over-reverse HVP for our function $$f$$ defined by \eqref{eq:mlp} makes us understand the differences between this mode and the `forward-over-reverse` mode. Particularly, one can notice that there are more elementary operations in the `reverse-over-reverse` mode than in the `forward-over-reverse` mode. Moreover, in terms of memory footprint, the `reverse-over-reverse` requires storing the values of the vertices of the computational graph of the gradient of $$f$$, while the `forward-over-reverse` only needs to store the values of the vertices of the computational graph of $$f$$. Thus, the former is less efficient than the latter.
+Writting down the code of the reverse-over-reverse HVP for our function $$f_x$$ defined by \eqref{eq:mlp} makes us understand the differences between this mode and the `forward-over-reverse` mode. Particularly, one can notice that there are more elementary operations in the `reverse-over-reverse` mode than in the `forward-over-reverse` mode. Moreover, in terms of memory footprint, the `reverse-over-reverse` requires storing the values of the vertices of the computational graph of the gradient of $$f_x$$, while the `forward-over-reverse` only needs to store the values of the vertices of the computational graph of $$f_x$$. Thus, the former is less efficient than the latter.
 
 ```python
 def reverse_over_reverse(U, W, vu, vw):
@@ -349,10 +355,10 @@ def reverse_over_reverse(U, W, vu, vw):
     ## Forward through f
     z1 = W @ x
     z2 = U @ z1
-    output = .5 * jnp.linalg.norm(z2)**2
+    output = 0.5 * jnp.linalg.norm(z2)**2
 
     ## Reverse through f
-    ### output = .5 * jnp.linalg.norm(z2)**2
+    ### output = 0.5 * jnp.linalg.norm(z2)**2
     z3 = z2  # dz2
 
     ### z2 = U @ z1
@@ -393,15 +399,17 @@ def reverse_over_reverse(U, W, vu, vw):
   ```
 
 ### Reverse-over-forward
-The quantity $$\langle \nabla f(x),v\rangle$$ is also the product between the Jacobian matrix of $$f$$ and the vector $$v$$. Therefore, it can be computed using forward AD.
+What about doing forward differentiation of $$f$$ rather than reverse propagation? This is what is done in the reverse-over-forward mode. It consists in backpropagating in the computational graph of the JVP of $$f$$ and $$v$$.
 
 ```python
-def hvp_reverse_over_forward(f, x, v):
-  jvp_fun = lambda x: jax.jvp(f, (x, ), (v, ))[1]
-  return jax.grad(jvp_fun)(x)
+def hvp_reverse_over_forward(f, params, v):
+  jvp_fun = lambda params: jax.jvp(f, (params, ), (v, ))[1]
+  return jax.grad(jvp_fun)(params)
 ```
 
 This method a more efficient than the previous one. Indeed, since we backpropagate only once, the memory burden is lower than for the `reverse_over_reverse` fashion. In comparison with `forward-over-reverse`, the complexity is the same. However, one can notice that the `forward-over-reverse` enables computing at the same time the gradient of $$f$$ and the HVP, which is not the case for the `reverse-over-forward` mode. This feature can be useful in bilevel optimization for instance.
+
+The code of the `reverse-over-forward` HVP for the MLP $$f_x$$ defined by \eqref{eq:mlp} is the following. 
 
 ```python
 def reverse_over_forward(U, W, vu, vw):
@@ -453,14 +461,17 @@ All computations were run on an Nvidia A100 GPU with 40 GB of memory.
 The first comparison we make is a comparison in terms of wall-clock time between the different ways to compute HVPs and also the computation of a gradient by backpropagation. For each architecture, we compute the gradient of the model with respect to the parameters by backpropagation. We also compute the HVPs in `forward-over-reverse`, `reverse-over-forward` and `reverse-over-reverse` modes. For each computation, we measure the time taken, and for the HVP, we subtract the time taken by a gradient computation, to get only the time of the overhead required by the HVP computation.
 The inputs for each architecture are generated randomly. For the ResNet34 architecture, we generated a batch of images of size 224x224x3. To limit out-of-memory issues in the experiments, we generated for the ViT architecture images of size 96x96x3. For the BERT architecture, we generated a batch of sequences of length 32.
 
-We first use JAX. Each computation is jit-compiled and is run 90 times. We plot on the left of the figure, the median computation time and also the 20% and 80% percentile. The computations are done with a batch size of 128. The first observation we make is that, in practice, a HVP computation takes between twice and three times the time taken by a gradient computation for the three architectures, which is consistent with the theory. Moreover, the `reverse-over-reverse` is the slowest in all the cases.
-
+We first use `JAX` with just-in-time compilation. Each computation is run 90 times. We plot on the left of the figure, the median computation time and also the 20% and 80% percentile. The computations are done with a batch size of 128. The first observation we make is that, in practice, a HVP computation takes between twice and three times the time taken by a gradient computation for the three architectures. This is consistent with the theory. One can notice that the `reverse-over-reverse` is slightly slower than the others in all the cases.
 
 We also report on the right figure the computational time of each method with respect to the batch size for the ResNet34 architecture. We observe, as expected, that the computational time scales linearly with the batch size.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_time_jax.png" class="img-fluid" %}
 
-We run a similar experiment with the functional API available in `PyTorch` [`torch.func`](https://pytorch.org/docs/stable/func.html) similar to the one `JAX` has. The results we get are more contrasted. In the case of ResNet34, the scaling between the different methods is similar to the one we get with JAX. For ViT and BERT, the `forward-over-reverse` is surprisingly longer than the `reverse-over-reverse` method. Moreover, the scaling between the gradient and HVP computational time differs from the one we get with `JAX`. Indeed, for the ViT and BERT architecture, the HVP computations take between four and five more time than the gradient computations. This is a discrepancy with what we would expect in theory.
+We run a similar experiment with the functional API available in `PyTorch` [`torch.func`](https://pytorch.org/docs/stable/func.html) similar to the one `JAX` has. The results we get are more contrasted. 
+
+In the case of ResNet34, the scaling between the different methods is similar to the one we get with JAX. During our experiments, we figured out that the batch normalization made the forward computation slow and induced out-of-memory issues. Thus, we removed the batch normalization layers from the ResNet34 architecture.
+
+For ViT and BERT, the `forward-over-reverse` is surprisingly longer than the `reverse-over-reverse` method. Moreover, the scaling between the gradient and HVP computational time differs from the one we get with `JAX`. Indeed, for the ViT and BERT architecture, the HVP computations take between four and five more time than the gradient computations. This is a discrepancy with what we would expect in theory. This might be because the functional API of `PyTorch` is still in its early stages. Particularly, we could not use the compilation `torch.compile` with some operator from `torch.func` such as `torch.func.jvp`.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_time_torch.png" class="img-fluid" %}
 
