--- a/_posts/2024-05-07-bench-hvp.md
+++ b/_posts/2024-05-07-bench-hvp.md
@@ -61,13 +61,13 @@ With this blog post, we aim to convince the practitioners that with modern autom
 
 Let us first introduce the notion of Hessian and HVP. We will consider in this post a twice differentiable function $$f:\mathbb{R}^d\to\mathbb{R}$$ that goes from a vector $$x$$ in space $$\mathbb{R}^d$$ to a real number in $$\mathbb{R}$$. This typically corresponds to a function that maps the value of the parameters $$\theta$$ of a neural network to the loss $$f(\theta)$$.
 For such a function, standard AD can be used to efficiently compute the gradient of the loss $$\nabla f(\theta) = \left[ \frac{\partial f}{\partial \theta_i}(\theta)\right]_{1\le i \le d} \in \mathbb{R}^d$$, using the so-called backpropagation.
-The Hessian matrix of $$f$$ at $$x$$ is the matrix of its second-order partial derivatives
+The Hessian matrix of $$f$$ at $$\theta$$ is the matrix of its second-order partial derivatives
 
 $$
   \nabla^2 f(\theta) = \left[\frac{\partial^2f}{\partial \theta_i\partial \theta_j}(\theta)\right]_{1\leq i,j\leq d}\in\mathbb{R}^{d\times d}\enspace.
 $$
 
-This matrix corresponds to the derivative of the gradient and captures how the gradient will change when moving $$x$$. To evaluate the variation of the gradient when moving $$x$$ in the direction $$v\in\mathbb{R}^d$$, one can compute the quantity $$\nabla^2 f(\theta) v\in\mathbb{R}^d$$. This is the so-called Hessian-vector product (HVP).
+This matrix corresponds to the derivative of the gradient and captures how the gradient will change when moving $$x$$. To evaluate the variation of the gradient when moving $$\theta$$ in the direction $$v\in\mathbb{R}^d$$, one can compute the quantity $$\nabla^2 f(\theta) v\in\mathbb{R}^d$$. This is the so-called Hessian-vector product (HVP).
 
 Let us review some use cases of HVPs in optimization and machine learning.
 
@@ -105,7 +105,7 @@ $$
 
 Here, the term $$\nabla^2_{yy} G(x, y)$$ is the Hessian of the function $$G$$ relatively to $$y$$. Thus, this quantity also requires computing an iHVP.
 
-To compute the iHVP, many methods proposed in the literature rely on HVPs to solve \eqref{eq:linear_system} without ever accessing $$\nabla^2 f$$, like Neumann iterates<d-cite key="Ghadimi2018"></d-cite><d-cite key="Ji2021stocbio"></d-cite>, the Conjugate Gradient method or gradient descent steps<d-cite key="Arbel2022amigo"></d-cite><d-cite key="Dagreou2022SABA"></d-cite> in the quadratic form $$v\mapsto \frac12\langle\nabla^2f(\theta)v, v\rangle - \langle b, v\rangle$$. These methods are based on the computation of HVPs, as illustrated with the highlighted terms in the Conjugate Gradient method<d-cite key=Hestenes1952CG></d-cite><d-cite key=Nocedal2006></d-cite>. Thus, an efficient implementation of HVPs is crucial for the overall algorithm performance.
+To compute the iHVP, there are many methods in the literature to solve \eqref{eq:linear_system}, like Neumann iterates<d-cite key="Ghadimi2018"></d-cite><d-cite key="Ji2021stocbio"></d-cite>, the Conjugate Gradient method<d-cite key=Hestenes1952CG></d-cite><d-cite key=Nocedal2006></d-cite> or gradient descent steps in the quadratic form $$v\mapsto \frac12\langle\nabla^2f(\theta)v, v\rangle - \langle b, v\rangle$$<d-cite key="Arbel2022amigo"></d-cite><d-cite key="Dagreou2022SABA"></d-cite>. These methods rely on HVPs, as illustrated by the highlighted terms in the Conjugate Gradient method. Thus, an efficient implementation of HVPs is crucial for the overall algorithm performance.
 
 <p class="framed">
   <b class="underline">Conjugate gradient to solve \eqref{eq:linear_system}</b><br>
@@ -134,7 +134,7 @@ The study of the geometry of neural networks is an active field that aims at und
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/hess_eig.png" class="img-fluid" %}
  
 
-In several papers<d-cite key=Ghorbani2019></d-cite><d-cite key=Dauphin2014></d-cite><d-cite key=Sagun2018></d-cite><d-cite key=Foret2021SAM></d-cite>, an approximation of the Hessian spectrum is computed thanks to the Lanczos algorithm<d-cite key=Lanczos1950></d-cite>. This algorithm is a modification of the power method where each new iterate is taken in the orthogonal complement of the previous iterates.
+In several papers<d-cite key=Ghorbani2019></d-cite><d-cite key=Dauphin2014></d-cite><d-cite key=Foret2021SAM></d-cite>, an approximation of the Hessian spectrum is computed thanks to the Lanczos algorithm<d-cite key=Lanczos1950></d-cite>. This algorithm is a modification of the power method where each new iterate is taken in the orthogonal complement of the previous iterates.
 
 <p class="framed">
   <b class="underline">Lanczos' algorithm</b><br>
@@ -150,7 +150,7 @@ In several papers<d-cite key=Ghorbani2019></d-cite><d-cite key=Dauphin2014></d-c
   \begin{align*}
     \beta_i &= \|w_{i-1}\|\\
     v_{i} &= \frac{w_{i-1}}{\beta_{i}}\\
-    w_i' &= \textcolor{orange}{\nabla^2f(x)v_i}\\
+    w_i' &= \textcolor{orange}{\nabla^2f(\theta)v_i}\\
     \alpha_i &= w_i'^\top v_i\\
     w_i &= w_i' - \alpha_i v_i - \beta_iv_{i-1}
   \end{align*}
@@ -158,12 +158,10 @@ In several papers<d-cite key=Ghorbani2019></d-cite><d-cite key=Dauphin2014></d-c
 
 We observe once again that the Hessian information is accessed through HVPs rather than the full Hessian matrix itself.
 
-We now turn to the practical computation of HVPs.
-
 
 ## A quick detour of automatic differentiation
 
-Automatic differentiation is an important tool to compute exactly the derivatives of differentiable functions obtained as the composition of simple operations.
+Automatic differentiation (AD) is an important tool to compute exactly the derivatives of differentiable functions obtained as the composition of simple operations.
 There are two modes in AD; the forward mode that computes Jacobian-vector products (JVPs) and the reverse mode that computes vector-Jacobian products (VJPs).
 Since the gradient of a scalar function is a special case of the VJP, the reverse mode is the most frequently used in machine learning.
 It is typically used to compute the gradients of deep learning cost functions, where it is called *backpropagation*<d-cite key="Rumelhart1986"></d-cite>. 
@@ -192,7 +190,7 @@ def f(U, W):
     return output
 ```
 
-Let us consider a function $$f:\mathbb{R}^d\to\mathbb{R}^p$$ with this simple computational graph.
+To explain how AD works, we take a simple example. Let us consider a function $$f:\mathbb{R}^d\to\mathbb{R}^p$$ with this computational graph.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/direct_graph.png" class="img-fluid"%}
 
@@ -212,7 +210,7 @@ The forward mode aims at computing JVPs
   \frac{\partial f}{\partial \theta}(\theta)\times v = \frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_2}{\partial z_1}v\enspace.
 \end{equation}
 
-The forward mode consists in doing the multiplications in \eqref{eq:chain_rule_jvp} from the right to the left. This corresponds to a forward pass in the computational graph where we propagate at the same time the states $$z_i$$ and the partial derivatives $$\frac{\partial z_{i+1}}{\partial z_i}$$. In the case where $$f$$ is real-valued, we obtain the gradient by computing $$d$$ JVPs since 
+It consists in doing the multiplications in \eqref{eq:chain_rule_jvp} from the right to the left. It is a forward pass in the computational graph where we propagate at the same time the states $$z_i$$ and the partial derivatives $$\frac{\partial z_{i+1}}{\partial z_i}$$. If $$f$$ is real-valued, we get its gradient by computing $$d$$ JVPs since 
 
 $$
 \frac{\partial f}{\partial \theta_i}(\theta) = \frac{\partial f}{\partial \theta}(\theta) e_i
@@ -248,7 +246,7 @@ The reverse mode aims at computing VJPs
   v^\top\frac{\partial f}{\partial \theta}(\theta) = v^\top\frac{\partial z_n}{\partial z_{n-1}}\frac{\partial z_{n-1}}{\partial z_{n-2}}\cdots\frac{\partial z_2}{\partial z_1}\enspace.
 \end{equation}
 
-In the reverse AD, we do the multiplications of \eqref{eq:chain_rule_jvp} from the left to the right. It requires doing one forward pass in the computational graph to compute the intermediate states $$z_i$$ and then a backward pass to propagate the successive partial derivatives from the left to the right. Contrary to the forward mode, it has a more important memory footprint. Indeed, it requires storing the values of all the states. For instance, to compute the last term $$\frac{\partial z_2}{\partial z_1}$$, one needs the value of $$z_1$$ which was the first computed during the forward pass. If $$f$$ is scalar, its gradient is a VJP with $$v=1$$. Thus, one can get the gradient on $$f$$ by performing only one reverse differentiation. This makes this mode more efficient to compute gradients.
+In the reverse AD, the multiplications of \eqref{eq:chain_rule_jvp} are done from the left to the right. It requires doing one forward pass in the computational graph to compute the intermediate states $$z_i$$ and then a backward pass to propagate the successive partial derivatives from the left to the right. Contrary to the forward mode, it has a more important memory footprint. Indeed, it requires storing the values of all the states. For instance, to compute the last term $$\frac{\partial z_3}{\partial z_2}$$, one needs the value of $$z_2$$ which was the first computed during the forward pass. If $$f$$ is scalar, its gradient is a VJP with $$v=1$$. Thus, one can get the gradient on $$f$$ by performing only one reverse differentiation. This makes this mode more efficient in computing gradients.
 
 Let us observe what happens if we code manually the backpropagation to get the gradient of the previous function $$f_x$$ defined by $$f_x(U, W) = \frac12(UW x)^2$$.
 
@@ -279,23 +277,22 @@ To get the gradient in JAX, one can use `jax.grad(f)(params)`.
 
 
 ## Naive computation of HVPs
-Since we are interested in computing $$\nabla^2 f(x)v$$, the simplest way to do it is to compute the Hessian matrix and then multiply it by the vector $$v$$. This can be achieved in `JAX` by calling `jax.hessian(f)(params) @ v`.
+Since we are interested in computing $$\nabla^2 f(\theta)v$$, the simplest way to do it is to compute the Hessian matrix and then multiply it by the vector $$v$$. This can be achieved in `JAX` by calling `jax.hessian(f)(params) @ v`.
 
 This method is quite cumbersome making it impossible to use for deep neural networks. Indeed, the storage of the full Hessian matrix has $$\mathcal{O}(d^2)$$ complexity where $$d$$ is the input dimension.
 
-However, it is possible to compute the HVP without computing the full Hessian matrix. 
+The good news is that we can compute HVP without computing the Hessian thanks to clever use of AD.
 
 
 ## HVPs without explicit Hessian computation
-A clever use of AD enables computing HVPs without computing the Hessian. The [JAX documentation](https://jax.readthedocs.io/en/latest/notebooks/autodiff_cookbook.html) describes three ways to do it.
-
-The HVP is also the directional derivative of the gradient in the direction $$v$$:
+In 1994, Pearlmutter<d-cite key="Pearlmutter1994"></d-cite> proposed to leverage the following observation to compute HVP efficiently: the HVP is also the directional derivative of the gradient in the direction $$v$$:
 
 $$
 \nabla^2f(\theta) v = \lim_{\epsilon\to 0} \frac1\epsilon[\nabla f(\theta+\epsilon v)-\nabla f(\theta)] = \nabla [\langle \nabla f(.), v\rangle](\theta)\enspace.
 $$
 
-Pearlmutter<d-cite key="Pearlmutter1994"></d-cite> proposed to leverage this identity to compute HVP without computing Hessian. This can be done in three fashions: the forward-over-reverse, the reverse-over-reverse and the reverse-over-forward.
+Based on this identity, AD enables to compute HVPs in three ways, as described in the [JAX documentation](https://jax.readthedocs.io/en/latest/notebooks/autodiff_cookbook.html).
+
 
 ### Forward-over-reverse
 The forward-over-reverse mode consists in doing forward differentiation in a computational graph of the gradient of $$f$$.
@@ -335,10 +332,10 @@ def forward_over_reverse(U, W, vu, vw):
     return vz4, vz6
   ```
 
-The take-home message of this part is that, after computing the gradient of $$f_x$$, one can consider a computational graph of this gradient and perform forward differentiation through this new computational graph. Here, the variables `z1`,..., `z6` are the vertices of a computational graph of the gradient of $$f_x$$. The nice thing is that the mode enables getting at the same time the gradient and the HVP. Indeed, in the previous snippet, `z4` and `z6` are actually the gradient of $$f_x$$ which could be also returned if needed.
+The take-home message of this part is that, after computing the gradient of $$f_x$$, one can consider a computational graph of this gradient and performs forward differentiation through this new computational graph. Here, the variables `z1`,..., `z6` are the vertices of a computational graph of the gradient of $$f_x$$. The nice thing is that this mode enables getting at the same time the gradient and the HVP. Indeed, in the previous snippet, `z4` and `z6` are actually the components of the gradient of $$f_x$$ which could be also returned if needed. This feature can be useful in bilevel optimization for instance.
 
 ### Reverse-over-reverse
-Instead of doing forward differentiation of the gradient, one can multiply the gradient by $$v$$. Since we get a scalar, one can backpropagate in this scalar product. This is the reverse-over-reverse mode.
+Instead of doing forward differentiation of the gradient, one can multiply the gradient by $$v$$ and thus get a scalar. We can then backpropagate into this scalar product. This is the reverse-over-reverse mode.
 
 It can be implemented by these lines of code.
 ```python
@@ -407,7 +404,7 @@ def hvp_reverse_over_forward(f, params, v):
   return jax.grad(jvp_fun)(params)
 ```
 
-This method a more efficient than the previous one. Indeed, since we backpropagate only once, the memory burden is lower than for the `reverse_over_reverse` fashion. In comparison with `forward-over-reverse`, the complexity is the same. However, one can notice that the `forward-over-reverse` enables computing at the same time the gradient of $$f$$ and the HVP, which is not the case for the `reverse-over-forward` mode. This feature can be useful in bilevel optimization for instance.
+This method a more efficient than the previous one. Indeed, since we backpropagate only once, the memory burden is lower than for the `reverse_over_reverse` fashion. In comparison with `forward-over-reverse`, the complexity is the same. However, one can notice that the `forward-over-reverse` enables computing at the same time the gradient of $$f$$ and the HVP, which is not the case for the `reverse-over-forward` mode. 
 
 The code of the `reverse-over-forward` HVP for the MLP $$f_x$$ defined by \eqref{eq:mlp} is the following. 
 
@@ -446,22 +443,22 @@ def reverse_over_forward(U, W, vu, vw):
     return dU, dW
 ```
 
-Now we turn to the main contribution of this blogpost, which is a benchmark of the different methods to compute HVPs.
+Now we turn to the main contribution of this blog post, which is a benchmark of the different methods to compute HVPs.
 
 ## Benchmark with deep learning architectures
 
-While these three methods compute the same outputs, the different ways of traversing the computational graph change their overall time and memory complexities. We now compare the computation of HVPs with these three methods for various deep-learning architectures. In order to cover a broad range of use cases, we consider a residual network ([ResNet34](https://huggingface.co/docs/transformers/model_doc/resnet)<d-cite key="He2015resnet"></d-cite>) and a transformer based architecture ([ViT-base](https://huggingface.co/docs/transformers/model_doc/vit)<d-cite key="Dosovitskiy2021"></d-cite>) for image classification as well as a transformer for natural language processing ([Bert-base](https://huggingface.co/docs/transformers/model_doc/bert#transformers.FlaxBertForTokenClassification).<d-cite key="Devlin2019"></d-cite>).
-We use the Flax implementation of these architectures available in the [transformers package](https://huggingface.co/docs/transformers/) provided by [Hugging Face 🤗](https://huggingface.co).
+While these three methods compute the same outputs, the different ways of traversing the computational graph change their overall time and memory complexities. We now compare the computation of HVPs with these three methods for various deep-learning architectures. To cover a broad range of use cases, we consider a residual network ([ResNet34](https://huggingface.co/docs/transformers/model_doc/resnet)<d-cite key="He2015resnet"></d-cite>) and a transformer-based architecture ([ViT-base](https://huggingface.co/docs/transformers/model_doc/vit)<d-cite key="Dosovitskiy2021"></d-cite>) for image classification as well as a transformer for natural language processing ([Bert-base](https://huggingface.co/docs/transformers/model_doc/bert#transformers.FlaxBertForTokenClassification).<d-cite key="Devlin2019"></d-cite>).
+We use the `Flax` and `PyTorch` implementations of these architectures available in the [transformers package](https://huggingface.co/docs/transformers/) provided by [Hugging Face 🤗](https://huggingface.co).
 
 All computations were run on an Nvidia A100 GPU with 40 GB of memory.
 
 
 ### Time complexity
 
-The first comparison we make is a comparison in terms of wall-clock time between the different ways to compute HVPs and also the computation of a gradient by backpropagation. For each architecture, we compute the gradient of the model with respect to the parameters by backpropagation. We also compute the HVPs in `forward-over-reverse`, `reverse-over-forward` and `reverse-over-reverse` modes. For each computation, we measure the time taken, and for the HVP, we subtract the time taken by a gradient computation, to get only the time of the overhead required by the HVP computation.
+The first comparison we make is a comparison in terms of wall-clock time between the different ways to compute HVPs and also the computation of a gradient by backpropagation. For each architecture, we compute the gradient of the model with respect to the parameters by backpropagation. We also compute the HVPs in `forward-over-reverse`, `reverse-over-forward` and `reverse-over-reverse` modes. For each computation, we measure the time taken. Specifically for the HVPs, we subtract the time taken by a gradient computation, to get only the time of the overhead required by the HVP computation.
 The inputs for each architecture are generated randomly. For the ResNet34 architecture, we generated a batch of images of size 224x224x3. To limit out-of-memory issues in the experiments, we generated for the ViT architecture images of size 96x96x3. For the BERT architecture, we generated a batch of sequences of length 32.
 
-We first use `JAX` with just-in-time compilation. Each computation is run 90 times. We plot on the left of the figure, the median computation time and also the 20% and 80% percentile. The computations are done with a batch size of 128. The first observation we make is that, in practice, a HVP computation takes between twice and three times the time taken by a gradient computation for the three architectures. This is consistent with the theory. One can notice that the `reverse-over-reverse` is slightly slower than the others in all the cases.
+We first use `JAX` with just-in-time compilation. Each computation is run 90 times. We plot on the left of the figure, the median computation time and also the 20% and 80% percentile. The computations are done with a batch size of 128. The first observation we make is that, in practice, a HVP computation takes between twice and three times the time taken by a gradient computation for the three architectures. This is consistent with the theory. One can notice that the `reverse-over-reverse` is slightly slower than the others in all the cases. The `forward-over-reverse` and `reverse-over-forward` are, as for them, very close in terms of time.
 
 We also report on the right figure the computational time of each method with respect to the batch size for the ResNet34 architecture. We observe, as expected, that the computational time scales linearly with the batch size.
 
@@ -469,9 +466,9 @@ We also report on the right figure the computational time of each method with re
 
 We run a similar experiment with the functional API available in `PyTorch` [`torch.func`](https://pytorch.org/docs/stable/func.html) similar to the one `JAX` has. The results we get are more contrasted. 
 
-In the case of ResNet34, the scaling between the different methods is similar to the one we get with JAX. During our experiments, we figured out that the batch normalization made the forward computation slow and induced out-of-memory issues. Thus, we removed the batch normalization layers from the ResNet34 architecture.
+In the case of ResNet34, the scaling between the different methods is similar to the one we get with `JAX`. Also, during our experiments, we figured out that batch normalization made the forward computation slow and induced out-of-memory issues. Thus, we removed the batch normalization layers from the ResNet34 architecture.
 
-For ViT and BERT, the `forward-over-reverse` is surprisingly longer than the `reverse-over-reverse` method. Moreover, the scaling between the gradient and HVP computational time differs from the one we get with `JAX`. Indeed, for the ViT and BERT architecture, the HVP computations take between four and five more time than the gradient computations. This is a discrepancy with what we would expect in theory. This might be because the functional API of `PyTorch` is still in its early stages. Particularly, we could not use the compilation `torch.compile` with some operator from `torch.func` such as `torch.func.jvp`.
+For ViT and BERT, the `forward-over-reverse` is surprisingly longer than the `reverse-over-reverse` method. Moreover, the scaling between the gradient and HVP computational time differs from the one we get with `JAX`. Indeed, for these architectures, the HVP computations take between four and five more time than the gradient computations. This is a discrepancy with what we would expect in theory. This might be because, at the time we are writing this blog post, the functional API of `PyTorch` is still in its early stages. Particularly, we could not use the compilation with `torch.compile` because it do not work with some operators of `torch.func` such as `torch.func.jvp`.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_time_torch.png" class="img-fluid" %}
 
@@ -481,17 +478,23 @@ We also compare the memory footprint of each approach. The following figure prov
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_memory_jax.png" class="img-fluid" %}
 
-However, we do the same experiment by *disabling the JIT compilation*. The result we get corroborates more the theory. Indeed, one can observe in the following figure that the memory footprint of the `reverse-over-reverse` method is larger than the one of the `forward-over-reverse` and `reverse-over-forward` methods. This is because the `reverse-over-reverse` involves two successives backward differentiations while the two others involve only one reverse differentiation. Moreover, it scales linearly with the batch size, which was not the case in the previous figure in the small batch size regime. In light of these two results, the clever memory allocation performed during just-in-time compilation reduces the memory footprint of the computations.
+However, we do the same experiment by *disabling the JIT compilation*. The result we get corroborates the theory. Indeed, one can observe in the following figure that the memory footprint of the `reverse-over-reverse` method is larger than the one of the `forward-over-reverse` and `reverse-over-forward` methods. This is because the `reverse-over-reverse` involves two successive backward differentiations while the two others involve only one reverse differentiation. Moreover, it scales linearly with the batch size, which was not the case in the previous figure in the small batch size regime.
+
+In light of these two results, the clever memory allocation performed during just-in-time compilation reduces significantly the memory footprint of the HVP computations.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_memory_jax_without_jit.png" class="img-fluid" %}
 
-In the following figure, we plot the results we get with the `PyTorch` implementation. One can observe that in all the cases the `forward-over-reverse` consumes much memory in comparison with the `reverse-over-forward` mode. Actually, it is almost at the same level as `reverse-over-reverse` mode. The right plot of the evolution of the memory footprint with the batch size for the ResNet34 architecture evolves linearly as expected.
+In the following figure, we plot the results we get with the `PyTorch` implementation. One can observe that in all the cases the `forward-over-reverse` consumes much memory in comparison with the `reverse-over-forward` mode. It is almost at the same level as `reverse-over-reverse` mode, which is quite unexpected.
+
+The right plot of the evolution of the memory footprint with the batch size for the ResNet34 architecture evolves linearly as expected.
 
 {% include figure.html path="assets/img/2024-05-07-bench-hvp/bench_hvp_memory_torch.png" class="img-fluid" %}
 
 ## Conclusion
 
-In this blogpost, we have explored the different ways to compute HVP from theoretical and practical perspectives. We end up with the following take-home messages:
+In this blog post, we have explored the different ways to compute HVP from theoretical and practical perspectives. The three take-home messages to keep in mind are the following:
+
+* We can compute HVPs without computing Hessian matrices.
 
 * In practice, computing an HVP takes between twice and four times the time taken by a gradient computation and requires two to three times more memory than computing a gradient.
 
