added frontiers ref.

--- a/assets/bibliography/2024-05-07-elaborating-on-the-value-of-flow-matching-for-density-estimation.bib
+++ b/assets/bibliography/2024-05-07-elaborating-on-the-value-of-flow-matching-for-density-estimation.bib
@@ -71,3 +71,20 @@
   keywords = {in-progress,normalizing-flows,sbi},
   annotation = {ADS Bibcode: 2019arXiv191202762P}
 }
+
+@article{cranmer_frontier_2020,
+  title = {The Frontier of Simulation-Based Inference},
+  author = {Cranmer, Kyle and Brehmer, Johann and Louppe, Gilles},
+  year = {2020},
+  month = dec,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {117},
+  number = {48},
+  pages = {30055--30062},
+  issn = {0027-8424, 1091-6490},
+  doi = {10.1073/pnas.1912789117},
+  urldate = {2022-12-08},
+  langid = {english},
+  keywords = {read,sbi},
+  annotation = {presentation: https://indico.fnal.gov/event/48241/contributions/210577/attachments/140930/177293/talk-glouppe-clariphy.pdf}
+}
