added ref. to further lit. on sbi

--- a/assets/bibliography/2024-05-07-elaborating-on-the-value-of-flow-matching-for-density-estimation.bib
+++ b/assets/bibliography/2024-05-07-elaborating-on-the-value-of-flow-matching-for-density-estimation.bib
@@ -88,3 +88,28 @@
   keywords = {read,sbi},
   annotation = {presentation: https://indico.fnal.gov/event/48241/contributions/210577/attachments/140930/177293/talk-glouppe-clariphy.pdf}
 }
+
+@article{papamakarios_fast_2016,
+  title = {Fast {$\epsilon$}-Free {{Inference}} of {{Simulation Models}} with {{Bayesian Conditional Density Estimation}}},
+  author = {Papamakarios, George and Murray, Iain},
+  year = {2016},
+  publisher = {{arXiv}},
+  doi = {10.48550/ARXIV.1605.06376},
+  urldate = {2023-01-16},
+  copyright = {arXiv.org perpetual, non-exclusive license},
+  keywords = {read,sbi,sbi-posterior}
+}
+
+@misc{lueckmann_benchmarking_2021,
+  title = {Benchmarking {{Simulation-Based Inference}}},
+  author = {Lueckmann, Jan-Matthis and Boelts, Jan and Greenberg, David S. and Gon{\c c}alves, Pedro J. and Macke, Jakob H.},
+  year = {2021},
+  month = apr,
+  number = {arXiv:2101.04653},
+  eprint = {2101.04653},
+  primaryclass = {cs, stat},
+  publisher = {{arXiv}},
+  urldate = {2022-12-16},
+  archiveprefix = {arxiv},
+  keywords = {read,sbi}
+}
