--- a/assets/bibliography/2024-05-07-deqalg-reasoning.bib
+++ b/assets/bibliography/2024-05-07-deqalg-reasoning.bib
@@ -47,7 +47,7 @@
       title={Chapter 4: Deep Equilibrium Models},
       author={ Zico Kolter and David Duvenaud and Matt Johnson},
       year={2020},
-      url={implicit-layers-tutorial.org/deep_equilibrium_models/}
+      url={https://implicit-layers-tutorial.org/deep_equilibrium_models/}
 }
 
 @misc{gilmer2017neural,
