--- a/assets/bibliography/2024-05-07-deqalg-reasoning.bib
+++ b/assets/bibliography/2024-05-07-deqalg-reasoning.bib
@@ -67,3 +67,10 @@
       archivePrefix={arXiv},
       primaryClass={stat.ML}
 }
+
+@misc{scott1970,
+      title={ Outline of a mathematical theory of computation}, 
+      year={1970},
+      author={Dana S. Scott},
+      publication={Technical Monograph PRG-2},
+}
