--- a/assets/bibliography/2024-05-07-deqalg-reasoning.bib
+++ b/assets/bibliography/2024-05-07-deqalg-reasoning.bib
@@ -72,5 +72,5 @@
       title={ Outline of a mathematical theory of computation}, 
       year={1970},
       author={Dana S. Scott},
-      publication={Technical Monograph PRG-2},
+      howpublished={Technical Monograph PRG-2},
 }
